# o-lang

./: BUG_REPORT_VECTOR_CRASH.md  BUG_REPORT_VECTOR_EXIT.md  O_LANGUAGE_SPEC.md  README.md  STDLIB_DOCUMENTATION.md  VECTOR_IMPLEMENTATION_NOTES.md  basic_test.olang  basic_test_final.oc  box_test  box_test.olang  comprehensive_logical_not_test.olang  comprehensive_vector_test.olang  debug_main.olang  debug_string_test.olang  debug_vector  debug_vector.olang  final_test.oc  final_test.olang  import_only_test  lang.txt  main_with_import.olang  milestone1_complete.olang  minimal_output  minimal_string_test.olang  minimal_string_with_all_features.olang  minimal_struct_test.olang  minimal_test  minimal_test2  minimal_test3  minimal_test4  nested_not_test.olang  not_with_and_test.olang  original_not_test.olang  output  output_complex  point_def.olang  repro_crash.olang  repro_old_string.olang  reproduce_bug  reproduce_bug.olang  (+164 more)
docs/: TOC.md  (+4 more)
o-compiler/: CMakeLists.txt
o-compiler/src/: AST.h  CodeGen.cpp  CompilerDriver.cpp  CompilerDriver.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  main.cpp
o-compiler/tests/: README.md  SUMMARY.md  run_all_tests.sh  test_report_20260110_181519.txt  test_report_20260110_181541.txt  test_report_20260110_183532.txt  test_report_20260110_183939.txt  test_report_20260110_184141.txt  test_report_20260110_184253.txt  test_report_20260110_184453.txt  test_report_20260110_184844.txt  test_report_20260110_184850.txt  test_report_20260110_185115.txt  test_report_20260110_185207.txt  test_report_20260110_185506.txt  (+175 more)
(+126 files in other folders)
